# usfs

./: .editorconfig  .env.template  .gitignore  CLAUDE.md  DEDUPE.md  ENRICH.md  README.md  pyproject.toml
docs/: dedupe.md  enrich.md  index.md
migrations/: 001_rename_catalog_to_inventory.sql
src/usfs/: config.py  db.py  embeddings.py  enrich.py  load.py  main.py  providers.py  schema.py  search.py  usfs.py
tests/: test_db.py
